--- a/ThinkGeoMapRepo/ThinkGeoMapRepo/AppShell.xaml
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo/AppShell.xaml
@@ -78,11 +78,21 @@
         FlyoutDisplayOptions="AsMultipleItems" will create a separate flyout item for each child element    
         https://docs.microsoft.com/dotnet/api/xamarin.forms.shellgroupitem.flyoutdisplayoptions?view=xamarin-forms
     -->
-    <FlyoutItem Title="About" Icon="icon_about.png">
-        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
-    </FlyoutItem>
-    <FlyoutItem Title="Browse" Icon="icon_feed.png">
-        <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
+    <FlyoutItem Route="main"
+                FlyoutDisplayOptions="AsMultipleItems"
+                Title="FlyoutItems">
+        <ShellContent Route="AboutPage" 
+                      Title="About"
+                      Icon="icon_about.png"
+                      ContentTemplate="{DataTemplate local:AboutPage}" />
+        <ShellContent Route="MapPage"
+                      Title="Map"
+                      Icon="MapIconSmall.png"
+                      ContentTemplate="{DataTemplate local:MapPage}" />
+        <ShellContent Route="ItemsPage" 
+                      Title="Browse"
+                      Icon="icon_feed.png"
+                      ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
