Started MapBox and Naxam feature.

--- a/ThinkGeoMapRepo/ThinkGeoMapRepo/AppShell.xaml
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo/AppShell.xaml
@@ -89,6 +89,10 @@
                       Title="Map"
                       Icon="MapIconSmall.png"
                       ContentTemplate="{DataTemplate local:MapPage}" />
+        <ShellContent Route="MapBoxPage"
+                      Title="MapBox"
+                      Icon="MapIconSmall.png"
+                      ContentTemplate="{DataTemplate local:MapBoxPage}" />
         <ShellContent Route="ItemsPage" 
                       Title="Browse"
                       Icon="icon_feed.png"
