Implemented IconService to get png EmbeddedResources.  Also included new map Styles.

--- a/ThinkGeoMapRepo/ThinkGeoMapRepo/Views/MapPage.xaml
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo/Views/MapPage.xaml
@@ -75,7 +75,8 @@
             
             
             <xamarinforms:MapView x:Name="mapView"
-                                  VerticalOptions="FillAndExpand" />
+                                  VerticalOptions="FillAndExpand"
+                                  MapSingleTap="MapView_SingleTapFeaturePopupMode"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
