--- a/ThinkGeoMapRepo/ThinkGeoMapRepo/AppShell.xaml
+++ b/ThinkGeoMapRepo/ThinkGeoMapRepo/AppShell.xaml
@@ -103,6 +103,10 @@
                       Icon="icon_feed.png"
                       ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
+    <FlyoutItem Title="Basic Page">
+        <ShellContent Title="Basic Page"
+                      ContentTemplate="{DataTemplate local:BasicPage}" />
+    </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
     <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
